[gd_scene load_steps=50 format=3 uid="uid://cy53qwodknu3b"]

[ext_resource type="Texture2D" uid="uid://bueq1cyimn8jo" path="res://assets/resources/player/player_idle.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://c0bqaydoap4fk" path="res://src/scripts/characters/player/player.gd" id="1_xvyn7"]
[ext_resource type="Texture2D" uid="uid://cvwf0kyibox1y" path="res://assets/resources/player/player_air_spin.png" id="2_4vu8n"]
[ext_resource type="Texture2D" uid="uid://d0lkibk7v3jd8" path="res://assets/resources/player/player_jump.png" id="3_qlg0r"]
[ext_resource type="Texture2D" uid="uid://dk0fhktxe14oe" path="res://assets/resources/player/player_land.png" id="4_tuyoq"]
[ext_resource type="Texture2D" uid="uid://dfuqey2y5fjl2" path="res://assets/resources/player/player_run_cycle.png" id="5_fjrip"]
[ext_resource type="Script" uid="uid://ddg32infdet5m" path="res://src/scripts/core/state_machine.gd" id="6_0hlw3"]
[ext_resource type="Script" uid="uid://d27ci5jdlimkr" path="res://src/scripts/characters/player/states/player_idle_state.gd" id="7_4pcbe"]
[ext_resource type="Script" uid="uid://6fupemuyq7nc" path="res://src/scripts/characters/player/states/player_run_state.gd" id="8_xvyn7"]
[ext_resource type="Script" uid="uid://cp0uugvd3unq5" path="res://src/scripts/characters/player/states/player_jump_state.gd" id="9_4vu8n"]
[ext_resource type="Script" uid="uid://dfqq3vfl8btso" path="res://src/scripts/characters/player/states/player_double_jump_state.gd" id="11_kc20y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(16, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsi8j"]
atlas = ExtResource("2_4vu8n")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhiii"]
atlas = ExtResource("2_4vu8n")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpkk7"]
atlas = ExtResource("2_4vu8n")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_myy50"]
atlas = ExtResource("2_4vu8n")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_op12o"]
atlas = ExtResource("2_4vu8n")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6jla"]
atlas = ExtResource("2_4vu8n")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_qlg0r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_qlg0r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_qlg0r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("4_tuyoq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("4_tuyoq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("4_tuyoq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("4_tuyoq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("4_tuyoq")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("4_tuyoq")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("4_tuyoq")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("4_tuyoq")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("4_tuyoq")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_usugt"]
atlas = ExtResource("5_fjrip")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qshy"]
atlas = ExtResource("5_fjrip")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5acq0"]
atlas = ExtResource("5_fjrip")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h06g"]
atlas = ExtResource("5_fjrip")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_twf7n"]
atlas = ExtResource("5_fjrip")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmjc7"]
atlas = ExtResource("5_fjrip")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybrxc"]
atlas = ExtResource("5_fjrip")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkrvq"]
atlas = ExtResource("5_fjrip")
region = Rect2(96, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_t4otl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsi8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhiii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpkk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myy50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op12o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6jla")
}],
"loop": false,
"name": &"double_jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_qfm1y")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}],
"loop": false,
"name": &"land",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_usugt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qshy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5acq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h06g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twf7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmjc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybrxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkrvq")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_xvyn7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t4otl")
animation = &"idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("6_0hlw3")
initial_state_name = "PlayerIdleState"

[node name="PlayerIdleState" type="Node" parent="StateMachine"]
script = ExtResource("7_4pcbe")

[node name="PlayerRunState" type="Node" parent="StateMachine"]
script = ExtResource("8_xvyn7")

[node name="PlayerJumpState" type="Node" parent="StateMachine"]
script = ExtResource("9_4vu8n")

[node name="PlayerDoubleJumpState" type="Node" parent="StateMachine"]
script = ExtResource("11_kc20y")
